syntax = "proto3";
package proto;

option go_package = "github.com/gabrielfvale/ti0151-sistemas/app/internal/proto;proto";

import "google/protobuf/empty.proto";

service Actuator {
  rpc GetAvailableCommands(google.protobuf.Empty)
      returns (AvailableCommandsResponse);
  rpc IssueCommand(IssueCommandRequest) returns (IssueCommandResponse);
  rpc GetProperties(google.protobuf.Empty) returns (PropertiesResponse);
}

message Command {
  int32 id = 1;
  string key = 2;
  string desc = 3;
}

message AvailableCommandsResponse { repeated Command commands = 1; }

message IssueCommandRequest { string key = 1; }

message IssueCommandResponse { string status = 1; }

message PropertiesResponse {
  string name = 1;
  string health = 2;
}
